<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/vencedor_skin_background">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/app_bar"
        android:padding="32dp">

        <TextView
            android:textColor="?attr/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="¡Completa tus datos!"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="16sp"
            android:padding="16dp"/>

        <EditText
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_insert_name"
            android:textSize="16sp"
            android:paddingLeft="16dp"
            android:layout_marginBottom="4dp"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_insert_email"
            android:textSize="16sp"
            android:paddingLeft="16dp"
            android:layout_marginBottom="4dp"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_insert_password"
            android:textSize="16sp"
            android:paddingLeft="16dp"
            android:layout_marginBottom="8dp"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/txtPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_insert_phonenumber"
            android:textSize="16sp"
            android:paddingLeft="16dp"
            android:layout_marginBottom="8dp"/>

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/cbTerms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_terms"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/vencedor_light_blue"
            android:text="@string/label_login"
            android:textColor="@color/white"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="16dp"/>

    </LinearLayout>

    <ImageView
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_margin="16dp"
        android:src="@drawable/footer_logo"
        android:layout_gravity="center"/>

</LinearLayout>